[gd_scene load_steps=13 format=3 uid="uid://2sb25nigkhhn"]

[ext_resource type="Script" uid="uid://b86m4m8oakkht" path="res://Testing/battle.gd" id="1_e41k2"]
[ext_resource type="Resource" uid="uid://d1jvn8s0i3ln4" path="res://Testing/characters/warrior/warrior.tres" id="4_1sdae"]
[ext_resource type="PackedScene" uid="uid://bers3xuynsf1y" path="res://Testing/card_target_selector.tscn" id="5_e41k2"]
[ext_resource type="Script" uid="uid://b5sw2oybcoa81" path="res://Testing/hand.gd" id="6_o617d"]
[ext_resource type="Script" uid="uid://dkmpxvqwsr262" path="res://Testing/battle_ui.gd" id="7_o617d"]
[ext_resource type="Script" uid="uid://6phfh6l1w5hf" path="res://Testing/player_handler.gd" id="7_odhhd"]
[ext_resource type="PackedScene" uid="uid://c6qs4x6qw8jit" path="res://Testing/mana_ui.tscn" id="10_55wsm"]
[ext_resource type="PackedScene" uid="uid://i5rcdxvoxm0y" path="res://Testing/token_ui.tscn" id="10_odhhd"]
[ext_resource type="PackedScene" uid="uid://b8gigwoqmugpq" path="res://Testing/warning_ui.tscn" id="11_1sdae"]
[ext_resource type="PackedScene" uid="uid://v3v1nx7sdiih" path="res://Testing/tooltip.tscn" id="11_odhhd"]
[ext_resource type="Theme" uid="uid://cf6tc5ho148e8" path="res://Testing/main_theme.tres" id="12_1sdae"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0ppn"]
size = Vector2(1921, 734.5)

[node name="TestingMain" type="Node2D"]
script = ExtResource("1_e41k2")
char_stats = ExtResource("4_1sdae")

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(959.5, 366.75)
shape = SubResource("RectangleShape2D_m0ppn")
debug_color = Color(0, 0.595, 0.7, 0.0666667)

[node name="CardTargetSelector" parent="." instance=ExtResource("5_e41k2")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("7_odhhd")
hand = NodePath("../BattleUI/Hand")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("7_o617d")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -240.0
offset_right = 384.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("6_o617d")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("10_55wsm")]
char_stats = ExtResource("4_1sdae")

[node name="Tooltip" parent="BattleUI" instance=ExtResource("11_odhhd")]
offset_top = 52.0
offset_bottom = 260.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -318.0
offset_top = -136.0
offset_right = -43.0
offset_bottom = -44.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("12_1sdae")
theme_override_font_sizes/font_size = 40
text = "End Turn
"

[node name="RerollButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -318.0
offset_top = -268.0
offset_right = -43.0
offset_bottom = -176.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("12_1sdae")
theme_override_font_sizes/font_size = 40
text = "Reroll
x/x
"

[node name="TokenUI" parent="BattleUI" instance=ExtResource("10_odhhd")]

[node name="WarningUI" parent="BattleUI" instance=ExtResource("11_1sdae")]

[connection signal="area_entered" from="CardDropArea" to="CardTargetSelector" method="_on_card_drop_area_area_entered"]
[connection signal="area_exited" from="CardDropArea" to="CardTargetSelector" method="_on_card_drop_area_area_exited"]
